--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,1 +1,20 @@
 @import "bootstrap";
+
+
+.board {
+  border: 5px solid black;
+  width: 795px;
+  height: 810px;
+}
+
+.white {
+  background-color: white;
+  width: 100px;
+  height: 100px;
+}
+
+.black {
+  background-color: black;
+  width: 100px;
+  height: 100px;
+}
